@@ -1,3 +1,11 @@
+2002-02-20  Ryan Nunn  <triforce@merlin.net.au>
+	* actors.cc : Fixing Serpent Isle change of portrait bug. Polymorphing 
+	  to 721 or 989 will now polymorph to the Avatar's actual shape.
+	* gumps/Face_stats.cc : No stat bars for non 'party' npcs. Fixes the
+	  Forsythe status bar crash.
+	* game.cc : Fixing int to bool conversion
+	* files/Flex.cc : Namespace
+
 2002-02-20  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* actors.cc: Fiddling with finding position for dead bodies.
